--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,9 @@
 <resources>
-    <string name="app_name">ToDoList</string>
+    <string name="app_name">Todo List</string>
     <string name="menu_add">Add</string>
+    <string name="title_add_new_item">Add New Item</string>
+    <string name="no_due">No due date</string>
+    <string name="btn_cancel">Cancel</string>
+    <string name="btn_ok">OK</string>
+    <string name="delete_item">Delete item</string>
 </resources>
